--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -71,6 +71,90 @@
             </div>
         </div>
     </div>
+    <div class="types-responsive">
+      <ngb-accordion [closeOthers]="true" activeIds="static-1">
+        <ngb-panel id="static-1"  >  
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div>User Experience </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+          <ng-template ngbPanelContent >
+           <div class="row">
+              <div class="col-md-6 design-left">
+                <p>Unravelling solutions for business problems in alignment with end-user expectations. 
+                  Creating functional, Usable, Pleasurable Unique and Value for digital products.</p>
+              </div>
+           </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-2">
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div><h2>Interface Design</h2></div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+           <ng-template ngbPanelContent>
+              <div class="row">
+                 <div class="col-md-6 design-left">
+                  <p>Aesthetically good design can instil curiosity for the customers to move beyond the 
+                    landing page. Make your website come alive with best UI.</p>
+                 </div>
+              </div>
+           </ng-template>
+         </ngb-panel>
+         <ngb-panel id="static-3">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>UI Development</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>The design comes to life when the robust technologies are put in place to experience 
+                    the best.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-4">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>End To End Development</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>Designing scalable platform harnessing the technology for business reach to their end 
+                    users with the better user experience, engagement and adaptablity.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-5">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>Usability Testing</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>Best of the designs, is the design that evolves and adapts as per user’s mental model. 
+                    It helps the business to evaluates the product or website before it is launched.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+      </ngb-accordion>
+    </div>
     <div class="cater">
         <div class="container">
             <div class="d-flex">
@@ -152,5 +236,110 @@
                 <div [ngbNavOutlet]="nav2" class="ml-4 px-5"></div>
             </div>
         </div>
+    </div>
+    <div class="cater-responsive">
+      <ngb-accordion [closeOthers]="true" activeIds="static-1">
+        <ngb-panel id="static-1"  >  
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div>Enterprise Applications </div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+          <ng-template ngbPanelContent >
+           <div class="row">
+              <div class="col-md-6 design-left">
+                <p>Prioritizing the road map with the key features involved is the key for designing 
+                  Enterprise Applications. It involves closely working with the internal business and product 
+                  teams; aligning the mission and vision with the key Stakeholders of the business. 
+                  Our consultants work as a true extension of the internal teams to bring the key changes 
+                  required in designing the application which acts as the backbone of the Core Business.</p>
+              </div>
+           </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-2">
+           <ng-template ngbPanelTitle>
+              <div class="dis_flex">
+                 <div><h2>Information Portals</h2></div>
+                 <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+              </div>
+            </ng-template> 
+           <ng-template ngbPanelContent>
+              <div class="row">
+                 <div class="col-md-6 design-left">
+                  <p>Discussion with the stakeholders to set the pitch and get the inputs 
+                    of target audience to focus on customer engagement and conversion. Building the face of your business 
+                    that speaks of the product or service offered and acts as the gateway for your business 
+                    transactions.</p>
+                 </div>
+              </div>
+           </ng-template>
+         </ngb-panel>
+         <ngb-panel id="static-3">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>Product Development</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>Beginning from Ideation to Market Launch our Consultants can help you bring 
+                    the product live. Our consultants can work as a true extension of internal business or development team. 
+                    The key for a Product Development is understand the Market; deep Research brings key Insights for 
+                    product development.<br>
+                    Urban & Hauser outline a range of new product development strategies  companies should consider. 
+                    They are classified as Reactive or Proactive, depending on how a company handles pressures from the 
+                    market and how it decides to use external and internal sources of product development.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-4">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>Digital Transformation</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>Transform the legacy system by reimagining the Process to embrace 
+                    Continuous Improvement & Innovation to elevate customer experience. A digital transformation 
+                    strategy can immensely help transform the business, streamline process with the use of latest 
+                    technologies for better customer experience and delivery better productivity.<br>
+                    The concern for many businesses can be, Are we too late to begin now?  It’s never too late to 
+                    begin, it is better to start now than never. In fact, digital speed is as much as 5 times faster 
+                    than a traditional business, and that pace is essential to becoming a  pioneer in the business 
+                    domain. Those companies at the forefront of the digital revolution earn much more authority, 
+                    trust and respect from customers.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel id="static-5">
+          <ng-template ngbPanelTitle>
+             <div class="dis_flex">
+                <div><h2>Strategy Design</h2></div>
+                <div class="arrow_rotate">  <img src="./assets/images/about/arrow.png"> </div>
+             </div>
+           </ng-template> 
+          <ng-template ngbPanelContent>
+             <div class="row">
+                <div class="col-md-6 design-left">
+                  <p>Mobile Apps have the potential to increase the business productivity 
+                    multi-fold by being in the field. Helps your product to reach masses and plays a critical role for 
+                    reaching the customers. With the need for constant updates and customer interaction the demand for 
+                    mobile apps have increased multi-fold. Aligning with the Native Ecosystem is the key to design for 
+                    Android & iOS which helps in easier adaptability. Our designers can churn the right features and 
+                    engagement with the best of customer experience.</p>
+                </div>
+             </div>
+          </ng-template>
+        </ngb-panel>
+      </ngb-accordion>
     </div>
 </div>
