--- a/src/app/modules/work/components/construction-portal/construction-portal.component.html
+++ b/src/app/modules/work/components/construction-portal/construction-portal.component.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="image">
+    <div class="image-event">
         <img src="./assets/images/works/construction1.png">
     </div>
     <div class="approach">
