--- a/src/app/modules/work/components/event-management/event-management.component.scss
+++ b/src/app/modules/work/components/event-management/event-management.component.scss
@@ -57,7 +57,7 @@ h6{
             padding: 150px 0px;
         }
     }
-    .image{
+    .image-event{
         img{
             width: 100%;
         }
