--- a/src/app/modules/work/components/skill-development/skill-development.component.html
+++ b/src/app/modules/work/components/skill-development/skill-development.component.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="image">
+    <div class="image-event">
         <img src="./assets/images/works/skill2.jpg">
     </div>
     <div class="approach">
