--- a/src/app/modules/work/components/health-care/health-care.component.html
+++ b/src/app/modules/work/components/health-care/health-care.component.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="image">
+    <div class="image-event">
         <img src="./assets/images/works/healthcare1.png">
     </div>
     <div class="approach">
