--- a/src/app/modules/work/components/networking/networking.component.html
+++ b/src/app/modules/work/components/networking/networking.component.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <div class="image">
+    <div class="image-event">
         <img src="./assets/images/works/net1.png">
     </div>
     <div class="approach">
