--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <div class="image">
+     <div class="image-event">
         <img src="./assets/images/works/uxahead 2.jpg">
     </div>
     <div class="approach">
@@ -66,7 +66,7 @@
             
         </div>
     </div>
-    <div class="image">
+    <div class="image-event">
         <img src="./assets/images/works/uxahead 4.png">
     </div>
     <div class="research">
