--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -56,7 +56,7 @@ h6{
             padding: 150px 0px;
         }
     }
-    .image{
+      .image-event{
         img{
             width: 100%;
         }
