--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -269,10 +269,9 @@
 .ngucarousel-indicator{
     // text-align: center;
     width: 100%;
-    padding-bottom: 0px;
-    padding-top: 0px;
+    padding-bottom: 20px;
+    padding-top: 30px;
     padding-left: 40px;
-    margin-top: -40px;
     li{
         display: inline-block;
         line-height: 22px;
@@ -351,6 +350,36 @@
         img{
             width: auto;
             height: 100%;
+        }
+    }
+    .ngucarousel-indicator{
+        // text-align: center;
+        width: 100%;
+        padding-bottom: 0px;
+        padding-top: 0px;
+        padding-left: 40px;
+        margin-top: -40px;
+        li{
+            display: inline-block;
+            line-height: 22px;
+            a{
+                display: block;
+                margin: 0 5px;
+                width: 15px;
+                height: 15px;
+                border: 2px solid #FFF;
+                background-color: #D0D0D0 !important;
+                text-indent: -999px;
+                overflow: hidden;
+                border-radius: 10px;
+                cursor: pointer;
+                &.active{
+                    width: 11px;
+                    height: 11px;
+                    border: 8px solid #FF424B;
+                    background-color: #FF424B !important;
+                }
+            }
         }
     }
 }
